<resources>
    <string name="blacklist_id">用户ID</string>
    <string name="blacklist">黑名单</string>
    <string name="join_in_blacklist">加入黑名单</string>
    <string name="add_blacklist">添加屏蔽用户</string>
    <string name="blacklist_tip">该屏蔽系统会在 EHentai 网站评论系统的基础上继续屏蔽评论。\n\n评论者屏蔽项：排除该评论者上传的评论。这会使加载画廊列表花费更多时间。</string>
    <string name="blacklist_text">屏蔽用户</string>
    <string name="delete_blacklist">取消屏蔽用户“%s”？</string>
    <string name="blacklist_reason_text">屏蔽原因</string>
    <string name="settings_eh_blacklist">评论黑名单</string>
    <string name="settings_eh_blacklist_summary">根据账号名称屏蔽他人评论</string>
    <string name="settings_advanced_dns_over_http_title">安全 DNS（DoH）</string>
    <string name="settings_advanced_dns_over_http_summary">解决某些地区的 DNS 污染问题</string>
    <string name="settings_advanced_domain_fronting_title">域名前置</string>
    <string name="settings_advanced_domain_fronting_summary">绕过 SNI 封锁</string>
    <string name="settings_advanced_url_replace_title">url伪装,需关闭SNI</string>
    <string name="settings_advanced_url_replace_summary">url伪装(需重启，开启后账户功能失效)</string>
    <string name="settings_about_donate_guide">支持指南</string>
    <string name="share_favorites_dialog_title">分享收藏</string>
    <string name="share_favorites_dialog_message">分享收藏 %s ？</string>
    <string name="add_favorites_dialog_message">添加收藏 %s ？</string>
    <string name="settings_advanced_built_ex_hosts_title">内置exhentai hosts.txt</string>
    <string name="settings_advanced_built_ex_hosts_summary">应用提供的主机到IP的映射\n可被自定义 hosts.txt 覆盖</string>
    <string name="network_remind">检测到开启了vpn，请注意您的网络安全</string>
    <string name="no_blicklist">这里是黑名单</string>
    <string name="settings_download_clean_invalid_download_confirm">确定清空无效的下载项？</string>
    <string name="settings_download_cleaning">正在清理下载项</string>
    <string name="settings_download_clean_invalid_done">完成清理 %d 个下载项</string>
    <string name="settings_download_clean_invalid_no_invalid">没有需要清空的下载项</string>
    <string name="settings_download_restore_download_items_get_gallery_info">恢复在画廊中的下载项</string>
    <string name="settings_download_export_no_items">没有导出项目</string>
    <string name="settings_download_export_failed">导出下载项失败</string>
    <string name="settings_download_export_succeed">成功导出下载项到 %s</string>
    <string name="settings_download_import_items">导入下载项</string>
    <string name="settings_download_import_no_items">没有导入项目</string>
    <string name="settings_download_import_failed">导入下载项失败</string>
    <string name="settings_download_import_succeed">成功导入 %d 个下载项</string>
    <string name="settings_eh_system_theme">系统主题</string>
    <string name="app_name">EhViewerNz</string>
    <string name="site_e" translatable="false">e-hentai</string>
    <string name="site_ex" translatable="false">exhentai</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_black">Black Theme</string>
    <string name="doujinshi" translatable="false">DOUJINSHI</string>
    <string name="manga" translatable="false">MANGA</string>
    <string name="artist_cg" translatable="false">ARTIST CG</string>
    <string name="game_cg" translatable="false">GAME CG</string>
    <string name="western" translatable="false">WESTERN</string>
    <string name="non_h" translatable="false">NON-H</string>
    <string name="image_set" translatable="false">IMAGE SET</string>
    <string name="cosplay" translatable="false">COSPLAY</string>
    <string name="asian_porn" translatable="false">ASIAN PORN</string>
    <string name="misc" translatable="false">MISC</string>
    <string name="unknown" translatable="false">UNKNOWN</string>
    <string name="homepage">Homepage</string>
    <string name="subscription">Subscription</string>
    <string name="bookmark_subscription">Quick Search Subscriptions</string>
    <string name="bookmark_subscription_empty">No subscribed Quick Searches. Open Quick Search settings from the right drawer and enable at least one subscription.</string>
    <string name="bookmark_subscription_enable">Add to Quick Search Subscriptions</string>
    <string name="bookmark_subscription_disable">Remove from Quick Search Subscriptions</string>
    <string name="bookmark_subscription_enabled">Added “%s” to Quick Search Subscriptions</string>
    <string name="bookmark_subscription_disabled">Removed “%s” from Quick Search Subscriptions</string>
    <string name="bookmark_subscription_unsupported">This Quick Search type cannot be subscribed to</string>
    <string name="bookmark_subscription_partial_failure">Some Quick Search Subscriptions could not be loaded</string>
    <string name="global_subscription">Global Subscriptions</string>
    <string name="global_subscription_empty">No galleries were found in EH subscriptions or Quick Search Subscriptions.</string>
    <string name="global_subscription_partial_failure">Some Global Subscription sources could not be loaded</string>
    <string name="update_subscriptions">Update subscriptions</string>
    <string name="subscription_update_countdown_format">%1$02d:%2$02d</string>
    <string name="subscription_updates_checking">Checking subscription updates…</string>
    <string name="subscription_updates_none">No subscription updates</string>
    <string name="subscription_updates_failed">Subscription update check failed</string>
    <string name="subscription_updates_already_checking">A subscription update check is already running</string>
    <string name="subscription_updates_no_sources">No subscription update source is enabled</string>
    <string name="subscription_updates_eh_message">EH updates:\t%1$d</string>
    <string name="subscription_updates_bookmark_message">Bookmark updates:\t%1$d</string>
    <string name="subscription_updates_global_message">Global updates:\t%1$d</string>
    <string name="search_corresponding_bookmarks">Search corresponding bookmarks</string>
    <string name="whats_hot">What\'s hot</string>
    <string name="top_lists">Top Lists</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="stub" translatable="false">Stub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="recaptcha">Recaptcha (Not required)</string>
    <string name="recaptcha_none">Tap here</string>
    <string name="recaptcha_loading">Loading…</string>
    <string name="recaptcha_failure">Failed</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="sign_in_via_webview">Sign in via WebView</string>
    <string name="sign_in_via_cookies">Sign in via cookies</string>
    <string name="webview_unavailable_title">System WebView unavailable</string>
    <string name="webview_unavailable_message">The system Android System WebView failed to load (it may be broken or mismatched). Try updating \"Android System WebView\" in the app store, switch the WebView implementation in Developer options, or sign in via cookies.</string>
    <string name="display_name_dialog_title">Enter Display Name</string>
    <string name="display_name">Display name</string>
    <string name="display_name_is_empty">Display name is empty</string>
    <string name="sign_in_first">Please sign in first</string>
    <string name="default_display_name">Little Hippo</string>
    <string name="cookie_explain">A cookie is a small piece of data stored in web browser. Google it if you don\'t know what it is or how to get it.\n\nPlease enter special cookies to sign in.</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="waring">Warning</string>
    <string name="wrong_cookie_warning">It seems that the cookies you entered are wrong. You\'d better check them.</string>
    <string name="i_will_check_it">I will check it</string>
    <string name="i_dont_think_so">I don\'t think so</string>
    <string name="found_cookies">Found cookies!</string>
    <string name="invalid_download_location">It seems download location is not available. Please set it in Settings.</string>
    <string name="cellular_network_warning">Connected to cellular networks</string>
    <string name="clipboard_gallery_url_snack_message">There is a gallery url in the clipboard</string>
    <string name="clipboard_gallery_url_snack_action">View</string>
    <string name="image_save_success">Picture saved successfully</string>
    <string name="error_status_code_400" translatable="false">Bad Request</string>
    <string name="error_status_code_401" translatable="false">Unauthorized</string>
    <string name="error_status_code_402" translatable="false">Payment Required</string>
    <string name="error_status_code_403" translatable="false">Forbidden</string>
    <string name="error_status_code_404" translatable="false">Not Found</string>
    <string name="error_status_code_405" translatable="false">Method Not Allowed</string>
    <string name="error_status_code_406" translatable="false">Not Acceptable</string>
    <string name="error_status_code_407" translatable="false">Proxy Authentication Required</string>
    <string name="error_status_code_408" translatable="false">Request Timeout</string>
    <string name="error_status_code_409" translatable="false">Conflict</string>
    <string name="error_status_code_410" translatable="false">Gone</string>
    <string name="error_status_code_411" translatable="false">Length Required</string>
    <string name="error_status_code_412" translatable="false">Precondition Failed</string>
    <string name="error_status_code_413" translatable="false">Request Entity Too Large</string>
    <string name="error_status_code_414" translatable="false">Request-URI Too Long</string>
    <string name="error_status_code_415" translatable="false">Unsupported Media Type</string>
    <string name="error_status_code_416" translatable="false">Requested Range Not Satisfiable</string>
    <string name="error_status_code_417" translatable="false">Expectation Failed</string>
    <string name="error_status_code_500" translatable="false">Internal Server Error</string>
    <string name="error_status_code_501" translatable="false">Not Implemented</string>
    <string name="error_status_code_502" translatable="false">Bad Gateway</string>
    <string name="error_status_code_503" translatable="false">Service Unavailable</string>
    <string name="error_status_code_504" translatable="false">Gateway Timeout</string>
    <string name="error_status_code_505" translatable="false">HTTP Version Not Supported</string>
    <string name="error_bad_status_code">Bad status code: %d</string>
    <string name="settings_about_declaration" translatable="false">EhViewer</string>
    <string name="settings_about_declaration_summary">EhViewer is not affiliated with E-Hentai.org in any way</string>
    <string name="settings_about_author">Author</string>
    <string name="settings_about_latest_release">Latest release</string>
    <string name="settings_about_issue_help">Issue Help</string>
    <string name="settings_about_license">License</string>
    <string name="settings_about_license_summary">EhViewer is made possible thanks to many open source projects</string>
    <string name="settings_about_donate">Donate</string>
    <string name="settings_about_check_for_updates">Check for updates</string>
    <string name="settings_close_automatic_updates">Turn off automatic updates</string>
    <string name="settings_about_fork_title" translatable="false">Fork: EhViewerNz</string>
    <string name="settings_about_fork_name" translatable="false">EhViewerNz</string>
    <string name="settings_about_fork_declaration_summary">EhViewerNz is not affiliated with E-Hentai.org in any way</string>
    <string name="settings_about_fork_author_summary" translatable="false">einpc</string>
</resources>