<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="declaration"
        android:summary="@string/settings_about_declaration_summary"
        android:title="@string/settings_about_declaration"
        app:allowDividerAbove="true" />

    <Preference
        android:key="author"
        android:title="@string/settings_about_author"
        app:allowDividerAbove="true" />

    <com.hippo.preference.UrlPreference
        android:ellipsize="end"
        android:key="author_fork"
        android:singleLine="true"
        android:summary="@string/settings_about_fork_author_summary"
        android:title="@string/settings_about_author"
        app:url="https://github.com/einpc/EhviewerNz" />


    <com.hippo.preference.UrlPreference
        android:ellipsize="end"
        android:key="issue_help"
        android:singleLine="true"
        android:title="@string/settings_about_issue_help"
        app:allowDividerAbove="true"
        app:url="https://github.com/einpc/EhviewerNz/blob/BiLi_PC_Gamer/feedauthor/EhviewerIssue.md" />

    <com.hippo.preference.ActivityPreference
        android:key="license"
        android:summary="@string/settings_about_license_summary"
        android:title="@string/settings_about_license"
        app:activity="com.hippo.ehviewer.ui.LicenseActivity"
        app:allowDividerAbove="true" />

    <Preference
        android:key="donate"
        android:title="@string/settings_about_donate"
        app:allowDividerAbove="true" />

    <PreferenceCategory
        android:title="@string/settings_about_fork_title"
        app:allowDividerAbove="true">

        <Preference
            android:key="fork_declaration"
            android:summary="@string/settings_about_fork_declaration_summary"
            android:title="@string/settings_about_fork_name" />

        <com.hippo.preference.UrlPreference
            android:key="fork_latest_release"
            android:title="@string/settings_about_latest_release"
            app:url="https://github.com/einpc/EhviewerNz/releases" />

        <com.hippo.ehviewer.preference.VersionPreference
            android:key="fork_version" />

        <Preference
            android:key="fork_check_for_updates"
            android:title="@string/settings_about_check_for_updates" />

        <com.hippo.preference.SwitchPreference
            android:defaultValue="false"
            android:key="close_auto_updates"
            android:title="@string/settings_close_automatic_updates" />

    </PreferenceCategory>

</PreferenceScreen>
